[package]
name = "rvsim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
regex = "1.7"
clap = { version = "4.2", features = ["derive"] }

[[bin]]
name = "rvsim-as"
path = "bin/as.rs"
